test/classes/errors/warn-misleading-new.good
warn-misleading-new.chpl:34: In function 'test2':
warn-misleading-new.chpl:36: warning: misleading new
warn-misleading-new.chpl:37: warning: misleading new
warn-misleading-new.chpl:38: warning: misleading new
warn-misleading-new.chpl:41: In function 'test2n':
warn-misleading-new.chpl:43: warning: misleading new
warn-misleading-new.chpl:44: warning: misleading new
warn-misleading-new.chpl:45: warning: misleading new
warn-misleading-new.chpl:48: In function 'test2nn':
warn-misleading-new.chpl:50: warning: misleading new
warn-misleading-new.chpl:51: warning: misleading new
warn-misleading-new.chpl:52: warning: misleading new
warn-misleading-new.chpl:56: In function 'test3':
warn-misleading-new.chpl:61: warning: misleading new
warn-misleading-new.chpl:62: warning: misleading new
warn-misleading-new.chpl:63: warning: misleading new
warn-misleading-new.chpl:66: In function 'test3n':
warn-misleading-new.chpl:71: warning: misleading new
warn-misleading-new.chpl:72: warning: misleading new
warn-misleading-new.chpl:73: warning: misleading new
warn-misleading-new.chpl:76: In function 'test3nn':
warn-misleading-new.chpl:81: warning: misleading new
warn-misleading-new.chpl:82: warning: misleading new
warn-misleading-new.chpl:83: warning: misleading new
warn-misleading-new.chpl:87: In function 'test4':
warn-misleading-new.chpl:95: warning: misleading new
warn-misleading-new.chpl:96: warning: misleading new
warn-misleading-new.chpl:97: warning: misleading new
warn-misleading-new.chpl:100: In function 'test4n':
warn-misleading-new.chpl:108: warning: misleading new
warn-misleading-new.chpl:109: warning: misleading new
warn-misleading-new.chpl:110: warning: misleading new
warn-misleading-new.chpl:113: In function 'test4nn':
warn-misleading-new.chpl:121: warning: misleading new
warn-misleading-new.chpl:122: warning: misleading new
warn-misleading-new.chpl:123: warning: misleading new
warn-misleading-new.chpl:87: In function 'test4':
warn-misleading-new.chpl:95: error: Scoped variable x would outlive the value it is set to
warn-misleading-new.chpl:96: error: Scoped variable y would outlive the value it is set to
warn-misleading-new.chpl:97: error: Scoped variable z would outlive the value it is set to
warn-misleading-new.chpl:100: In function 'test4n':
warn-misleading-new.chpl:108: error: Scoped variable x would outlive the value it is set to
warn-misleading-new.chpl:109: error: Scoped variable y would outlive the value it is set to
warn-misleading-new.chpl:110: error: Scoped variable z would outlive the value it is set to
warn-misleading-new.chpl:113: In function 'test4nn':
warn-misleading-new.chpl:121: error: Scoped variable x would outlive the value it is set to
warn-misleading-new.chpl:122: error: Scoped variable x would outlive the value it is set to
warn-misleading-new.chpl:123: error: Scoped variable x would outlive the value it is set to
